opam-version: "2.0"
name: "CertiGC"
version: "1.1"
maintainer: "CertiGraph team"
homepage: "https://github.com/CertiGraph/CertiGraph"
dev-repo: "git+https://github.com/CertiGraphCertiGraph.git"
bug-reports: "https://github.com/CertiGraphCertiGraph/issues"
license: "https://github.com/CertiGraphCertiGraph/blob/live/LICENSE"
authors: [ 
    "Shengyi Wang"
    "Andrew W. Appel"
]
build: [
    make "-j%{jobs}%" "certigc"
]
install: [
    make "install"
]
depends: [
    "coq" {>= "8.19.0" & < "8.20~"}
    "coq-vst" {= "2.14"}
    "coq-certigraph" {= version}
]
synopsis: "Verified generational garbage collector for CertiCoq"
description: """
Generational garbage collector for CertiCoq, written in C, verified with VST using the CertiGraph library.
"""
