opam-version: "2.0"
name: "CertiGraph"
version: "1.1"
maintainer: "CertiGraph team"
homepage: "https://github.com/CertiGraph/CertiGraph"
dev-repo: "git+https://github.com/CertiGraphCertiGraph.git"
bug-reports: "https://github.com/CertiGraphCertiGraph/issues"
license: "https://github.com/CertiGraphCertiGraph/blob/live/LICENSE"
authors: ["Aquinas Hobor"
    "Shengyi Wang"
    "Anshuman Mohan"
]
build: [
    make "-j%{jobs}%"
]
install: [
    make "install"
]
depends: [
    "coq" {>= "8.19.0" & < "8.20~"}
    "coq-vst" {= "2.14"}
]
synopsis: "A library for verifying graph-manipulating programs"
description: """
CertiGraph is a library for verifying graph-manipulating programs.
"""
